# polygp

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  tutorial.ipynb
.github/workflows/: python-package.yml
examples/: benchmark_datasets.py  computermodern.mplstyle  physics_example.py  test_sin.py
examples/data/: 01-airline.csv  02-solar.csv  03-mauna.csv  04-wheat.csv  05-temperature.csv  06-internet.csv  07-call-centre.csv  08-radio.csv  09-gas-production.csv  10-sulphuric.csv  11-unemployment.csv  12-births.csv  13-wages.csv
polygp/: __init__.py  means.py  polygp.py  priors.py
tests/: test_process.py
